[gd_scene load_steps=2 format=3 uid="uid://c8j9l3m6n4pqr"]

[ext_resource type="Script" path="res://scripts/ui/completion_summary.gd" id="1_completion"]

[node name="CompletionSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_completion")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Stars" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Score" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Score: 0 / 100"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Feedback" type="RichTextLabel" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true
text = "[center]Great job![/center]"
fit_content = true

[node name="HSeparator4" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Tips" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Tips will appear here"
autowrap_mode = 3

[node name="HSeparator5" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
text = "ðŸ”„ Retry"

[node name="Spacer" type="Control" parent="Panel/VBox/Buttons"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
text = "âž¡ Next Level"
